se corrigio una carpeta

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                     <div class="photo-container">
                         <div class="photo-frame">
                             <!-- Reemplaza "tu-imagen.jpg" con la ruta de tu imagen -->
-                            <img src="/image/B.png" alt="Foto especial" id="specialPhoto">
+                            <img src="./image/B.png" alt="Foto especial" id="specialPhoto">
                         </div>
                     </div>
                     <p class="photo-caption">Recuerdo tu mirada, y tus ojos me dieron mucho que entender ese dia</p>
